@@ -1,6 +1,7 @@
 package org.shop.com.controller;
 
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -14,16 +15,15 @@ import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-import java.util.List;
+import java.util.Arrays;
 
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.doNothing;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @ExtendWith(MockitoExtension.class)
-class CartItemControllerTest {
+public class CartItemControllerTest {
 
     @Mock
     private CartItemService cartItemService;
@@ -32,6 +32,8 @@ class CartItemControllerTest {
     private CartItemController cartItemController;
 
     private MockMvc mockMvc;
+    private ObjectMapper objectMapper = new ObjectMapper();
+
     @BeforeEach
     void setUp() {
         mockMvc = MockMvcBuilders.standaloneSetup(cartItemController).build();
@@ -39,16 +41,14 @@ class CartItemControllerTest {
 
     @Test
     void addCartItem_Success() throws Exception {
-        CartItemCreateDto createDto = new CartItemCreateDto(1L, 5);
+        CartItemCreateDto cartItemCreateDto = new CartItemCreateDto(1L, 5);
         CartItemDto cartItemDto = new CartItemDto(1L, 1L, 5);
 
-        given(cartItemService.addCartItem(any(CartItemCreateDto.class), eq(1L))).willReturn(cartItemDto);
+        given(cartItemService.add(any(CartItemCreateDto.class), eq(1L))).willReturn(cartItemDto);
 
-        mockMvc = MockMvcBuilders.standaloneSetup(cartItemController).build();
-
-        mockMvc.perform(post("/cartItems?cartId=1")
+        mockMvc.perform(post("/v1/cartItems?cartId=1")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"productId\":1,\"quantity\":5}"))
+                        .content(objectMapper.writeValueAsString(cartItemCreateDto)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.productId").value(1L))
                 .andExpect(jsonPath("$.quantity").value(5));
@@ -56,32 +56,29 @@ class CartItemControllerTest {
 
     @Test
     void removeCartItem_Success() throws Exception {
-        doNothing().when(cartItemService).removeCartItem(1L);
-        mockMvc.perform(delete("/cartItems/1"))
+        mockMvc.perform(delete("/v1/cartItems/1"))
                 .andExpect(status().isOk());
     }
 
     @Test
-    void getCartItemsByCartId_Success() throws Exception {
-        List<CartItemDto> cartItems = List.of(new CartItemDto(1L, 1L, 5));
-        given(cartItemService.getCartItemsByCartId(1L)).willReturn(cartItems);
+    void getByCartId_Success() throws Exception {
+        CartItemDto cartItemDto = new CartItemDto(1L, 1L, 5);
+        given(cartItemService.getByCartId(1L)).willReturn(Arrays.asList(cartItemDto));
 
-        mockMvc.perform(get("/cartItems/cart/1"))
+        mockMvc.perform(get("/v1/cartItems/cart/1"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$[0].productId").value(1L))
                 .andExpect(jsonPath("$[0].quantity").value(5));
     }
 
     @Test
-    void updateCartItemQuantity_Success() throws Exception {
-        CartItemDto updatedCartItemDto = new CartItemDto(1L, 1L, 10);
-        given(cartItemService.updateCartItemQuantity(1L, 10)).willReturn(updatedCartItemDto);
+    void updateQuantity_Success() throws Exception {
+        CartItemDto cartItemDto = new CartItemDto(1L, 1L, 10);
+        given(cartItemService.updateQuantity(eq(1L), eq(10))).willReturn(cartItemDto);
 
-        mockMvc.perform(put("/cartItems/1?quantity=10")
+        mockMvc.perform(put("/v1/cartItems/1?quantity=10")
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.quantity").value(10));
     }
-
-
 }
